mejoras de ejemplos de misc